Change text on button click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">fintech_lab</string>
+    <string name="main_text">Pakeistas tekstas</string>
 </resources>
