--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">fintech_lab</string>
     <string name="main_text">Pakeistas tekstas</string>
+    <string name="text_button_text">Change text</string>
+    <string name="color_button_text">Change color</string>
 </resources>
