--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">fintech_lab</string>
     <string name="main_text">Pakeistas tekstas</string>
     <string name="text_button_text">Change text</string>
+    <string name="color_button_text">Change color</string>
 </resources>
